web/app/styles.css
/* ... */
.posts {
  display: grid;
  grid-auto-flow: row;
  gap: 1rem;
}

.post {
  background-color: var(--surface-0);
  padding: 1rem;
  border-radius: 1rem;
  display: grid;
  grid-auto-flow: row;
  gap: 1rem;
  transition: background-color 200ms ease, box-shadow 200ms ease;
}

.post:target,
.post.highlighted {
  background-color: var(--surface-2);
  box-shadow: inset 0 0 0 1px var(--surface-primary);
}

.post-header {
  display: grid;
  grid-auto-flow: column;
  align-items: top;
  justify-content: space-between;
}

.post-author {
  text-decoration: none;
  color: inherit;
  display: grid;
  grid-auto-flow: column;
  align-items: center;
  gap: 0.5rem;
}

.post-author .username {
  word-break: break-word;
}

.post-meta {
  display: grid;
  grid-auto-flow: column;
  align-items: top;
  justify-content: right;
  gap: 0.5rem;
}

.post-ts {
  text-decoration: none;
  height: 3rem;
  display: grid;
  align-items: center;
  justify-content: center;
}

.post-menu-wrapper {
  position: relative;
}

.post-menu-wrapper-btn {
  padding: 0 1rem;
}

.post-menu-wrapper-btn[aria-expanded="true"] {
  border-bottom-right-radius: 0.25rem;
}

.post-menu {
  display: grid;
  grid-auto-flow: row;
  justify-content: left;

  position: absolute;
  top: 3.5rem;
  right: 0;
  z-index: 1;
  overflow: hidden;

  list-style: none;
  padding: 0;
  margin: 0;

  background-color: var(--surface-0);
  border-radius: 1.5rem;
  border-top-right-radius: 0.25rem;
  box-shadow: var(--box-shadow);

  will-change: opacity, transform;
  animation: fadedown 200ms cubic-bezier(0.34, 1.56, 0.64, 1) forwards;
}

@keyframes fadedown {
  from {
    opacity: 0;
    transform: translateY(-1rem);
  }

  to {
    opacity: 1;
    transform: translateY(0);
  }
}

.post-menu-btn {
  background-color: transparent;
  width: 100%;
  white-space: nowrap;
  justify-content: left;
  border-radius: 0;
}

.post-menu-item {
  display: block;
  width: 100%;
}

.post-content {
  display: grid;
  grid-auto-flow: row;
  gap: 1rem;
}

.post-content p {
  white-space: pre-line;
  margin: 0;
  overflow: hidden;
}

.post-warning {
  background-color: var(--surface-primary);
  border-radius: 1rem;
  padding: 1rem 1rem 0.5rem 1rem;
  border: 3px dashed var(--primary);
}

.post-warning p {
  margin-bottom: 1rem;
}

media-scroller zoomable-img {
  display: contents;
}

.media-scroller {
  list-style: none;
  margin: 0;
  padding: 0;
  width: auto;

  display: flex;
  flex-wrap: nowrap;
  gap: 0.5rem;

  overflow-x: auto;

  scroll-snap-type: inline mandatory;
}

.media-scroller {
  scrollbar-width: none;
}

.media-scroller.small>li>* {
  max-height: 7rem;
}

.media-scroller::-webkit-scrollbar {
  display: none;
}

.media-scroller li {
  display: contents;
}

.media-scroller img,
.media-scroller audio,
.media-scroller video,
.media-scroller iframe {
  display: block;
  flex: 0 0 auto;
  height: min-content;
  max-height: calc(100vh - 8rem);
  background-color: var(--background);
  border-radius: 1rem;
  overflow: hidden;
}

/* Safari issue */
@supports (height: intrinsic) {

  .media-scroller img,
  .media-scroller audio,
  .media-scroller video,
  .media-scroller iframe {
    height: intrinsic
  }
}

.media-scroller[data-length="1"] img,
.media-scroller[data-length="1"] audio,
.media-scroller[data-length="1"] video,
.media-scroller[data-length="1"] iframe {
  max-width: 100%;
}

.media-scroller[data-length="2"] img,
.media-scroller[data-length="2"] audio,
.media-scroller[data-length="2"] video,
.media-scroller[data-length="2"] iframe {
  max-width: calc(50% - 0.25rem);
}

.media-scroller:not([data-length="1"]):not([data-length="2"]) img,
.media-scroller:not([data-length="1"]):not([data-length="2"]) audio,
.media-scroller:not([data-length="1"]):not([data-length="2"]) video,
.media-scroller:not([data-length="1"]):not([data-length="2"]) iframe {
  max-width: calc(calc(100% / 2.1) - 0.5rem);
}

.media-scroller[data-length="1"] iframe,
.media-scroller[data-length="1"] audio {
  width: 100%;
}

.media-scroller audio {
  min-width: calc(100% / 1.1);
}

.media-scroller video,
.media-scroller iframe {
  aspect-ratio: 16/9;
}

.medium-zoom-overlay {
  background-color: rgba(0, 0, 0, 0.95) !important;
  z-index: 2;
}

.medium-zoom--opened .medium-zoom-image {
  z-index: 3;
}

.post-footer {
  display: grid;
  grid-auto-flow: column;
  align-items: end;
  justify-content: left;
  gap: 0.5rem;
}

.post-reactions {
  display: flex;
  flex-wrap: wrap;
  align-items: flex-start;
  justify-content: left;
  gap: 0.5rem;
}

.post-add-reaction-btn,
.post-reaction {
  padding: 0 1rem;
}

.post-add-reaction-btn[aria-expanded="true"] {
  border-bottom-left-radius: 0.25rem;
}

.post-reaction {
  gap: 0.25rem;
  color: var(--hint);
}

.post-reaction.reacted {
  background-color: var(--surface-primary);
  color: var(--on-surface);
}

.post-wrapper {
  background-color: var(--surface-0);
}

.post-wrapper .loader {
  padding: 2rem 0;
}

.post-wrapper .post {
  padding: 2rem 0;
}

comments-list .post {
  background-color: transparent;
  padding: 1rem 0;
}

.comments-wrapper {
  margin-top: 3rem;
  display: grid;
  grid-auto-flow: row;
  gap: 1rem;
}

.comments-wrapper h2 {
  margin: 0;
}

.comments {
  display: grid;
  grid-auto-flow: row;
  gap: 1rem;
}

.comment-form {
  display: grid;
  grid-auto-flow: row;
  justify-items: right;
  gap: 0.5rem;
}

.comment-form.has-content textarea {
  border-bottom-right-radius: 0.25rem;
}

.comment-form button {
  border-top-right-radius: 0.25rem;
}

.user-profile-wrapper {
  padding: 2rem 0;
  background-color: var(--surface-0);
}

.user-profile-wrapper[style] {
  background-image: var(--cover-url);
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
  background-color: var(--semi-transparent-surface);
  background-blend-mode: overlay;
}

.user-profile-wrapper[style] .user-profile button {
  box-shadow: var(--box-shadow);
}
/* ... */

